WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115433
Entering full screen mode shows desktop linen instead of WKView the first time.
https://bugs.webkit.org/show_bug.cgi?id=115433
Summary
Entering full screen mode shows desktop linen instead of WKView the first time.
Jer Noble
Reported
2013-04-30 11:20:18 PDT
Entering full screen mode shows desktop linen instead of WKView the first time.
Attachments
Patch
(1.78 KB, patch)
2013-04-30 11:23 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-04-30 11:21:19 PDT
<
rdar://problem/13774540
>
Jer Noble
Comment 2
2013-04-30 11:23:59 PDT
Created
attachment 200135
[details]
Patch
Jer Noble
Comment 3
2013-05-01 10:44:18 PDT
Committed
r149439
: <
http://trac.webkit.org/changeset/149439
>
mitz
Comment 4
2013-05-05 16:18:40 PDT
(In reply to
comment #3
)
> Committed
r149439
: <
http://trac.webkit.org/changeset/149439
>
This caused
bug 115617
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug