Entering full screen mode shows desktop linen instead of WKView the first time. https://bugs.webkit.org/show_bug.cgi?id=115433 <rdar://problem/13774540>

Reviewed by Eric Carlson.

For certain types of windows created by subclasses of WKView, the window in question fails to paint
when created with a zero-size rect. Create the window with an initial size of the active screen frame
as that is the likely destination size.

* UIProcess/API/mac/WKView.mm:
(-[WKView createFullScreenWindow]):

Canonical link: https://commits.webkit.org/133919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149439 268f45cc-cd09-0410-ab3c-d52691b4dbfc