Source/WebKit2/UIProcess/API/mac/WKView.mm
@@ -3394,7 +3394,7 @@ static NSString *pathWithUniqueFilenameForPath(NSString *path)
 - (NSWindow*)createFullScreenWindow
 {
 #if ENABLE(FULLSCREEN_API)
-    return [[[WebCoreFullScreenWindow alloc] initWithContentRect:NSZeroRect styleMask:NSBorderlessWindowMask backing:NSBackingStoreBuffered defer:NO] autorelease];
+    return [[[WebCoreFullScreenWindow alloc] initWithContentRect:[[NSScreen mainScreen] frame] styleMask:NSBorderlessWindowMask backing:NSBackingStoreBuffered defer:NO] autorelease];
 #else
     return nil;
 #endif
